--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,12 @@
-
-<h2>EAT-DA-BURGER<h2>
+<div class="container">
+<div id="jumbotron" class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">EAT-DA-BURGER</h1>
+    <p class="lead">Yummy, yummy in your tummy!</p>
+  </div>
+</div>
+</div>
+{{!-- <h2>EAT-DA-BURGER<h2> --}}
 
 <h3>Ready to be Devoured:</h3>
 
@@ -31,6 +38,6 @@
 
     </textarea>
 
-    <button type='submit'>Submit</button>
+    <button type='submit' class="btn btn-warning">Submit</button>
 
 </form>
