--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
     <ul class='name'>
         {{burger_name}}
 
-        <button class='devour' data-id='{{id}}' data-newdevour='{{devoured}}'>
+        <button class="btn btn-danger" id='devour' data-id='{{id}}' data-newdevour='{{devoured}}'>
             Devour me!
         </button>
     </ul>
