--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
 </div>
 {{!-- <h2>EAT-DA-BURGER<h2> --}}
 
-<h3>Ready to be Devoured:</h3>
+<h3>Ready to be Devoured : </h3>
 
 <ul>
     
@@ -20,7 +20,7 @@
 
 </ul>
 
-<h3>Devoured Burgers</h3>
+<h3>Devoured Burgers : </h3>
 
 <ul>
     
@@ -32,12 +32,14 @@
 
 </ul>
 
+<div class="container" id="form">
 <form class='create-form'>
 
-    <textarea rows='4' cols='50' id='submitBurger'>
+    <textarea rows='2' cols='40' id='submitBurger'>
 
     </textarea>
 
-    <button type='submit' class="btn btn-warning">Submit</button>
+    <button type='submit' id="subfont" class="btn btn-warning">Submit</button>
 
 </form>
+</div>
