--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,6 +10,33 @@
 
 #jumbotron {
 
-    background-image: url("https://cdn.pixabay.com/photo/2017/02/01/10/17/beef-2029405_960_720.png");
+    background-image: url("https://github.com/amirahislam/burger/blob/master/public/assets/img/burger_blog.png?raw=true");
     /* background-color: #cccccc; */
+
+}
+
+body {
+    background-color: #92e5c7;
+
+}
+
+h3 {
+    text-align: center;
+    font-family: 'Cookie', cursive;
+}
+
+ul {
+    text-align: center;
+    font-family: 'Great Vibes', cursive;
+    font-size: 20pt;
+}
+
+#form {
+    padding-left: 500px;
+    font-family: 'Great Vibes', cursive;
+
+}
+
+#subfont {
+    font-size: 20pt;
 }
